--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>8.0.0.Final</version>
+    </dependency>
+
   </dependencies>
 
   <build>
