--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
       <version>8.0.0.Final</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.7.3</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
